Adding admin interface.

--- a/food_app/templates/index.html
+++ b/food_app/templates/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Food App</h1>
-    <h3>{{ meals }}</h3>
+        {% for meal in meals %}
+        <h2>{{ meal.1 }}</h2>
+        {% for row in item_list %}
+            <h3>{{ row.meal }}</h3>
+            <p>{{ row.description }}</p>
+
+        {% endfor %}
+        {% endfor %}
 </body>
 </html>
