--- a/food_app/templates/menu_item_detail.html
+++ b/food_app/templates/menu_item_detail.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Menu Item</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container">
+    <h1 class="pt-5">{{ item.meal }}</h1>
+    <p>{{ item.description }}</p>
+    <p>{{ item.price }}</p>
+</div>
+{% endblock content %}
