--- a/food_app/templates/about.html
+++ b/food_app/templates/about.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>About us</h1>
+<div class="container">
+    <h1 class="pt-5">About us</h1>
+</div>
 {% endblock content %}
