--- a/food_app/templates/index.html
+++ b/food_app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    <h1>Food App</h1>
+    <h1 class="pt-5">Food App</h1>
         <ul class="list-group list-group-flush">
             {% for meal in meals %}        
                 <h2 class="pt-5">{{ meal.1 }}</h2>
