Adding Contact Form.

--- a/food_app/templates/about.html
+++ b/food_app/templates/about.html
@@ -2,5 +2,7 @@
 {% block content %}
 <div class="container">
     <h1 class="pt-5">About us</h1>
+    <p>This our food menu app.</p>
+    <p>Feel free to get in touch with us, if you have any questions.</p>
 </div>
 {% endblock content %}
