--- a/food_app/templates/base.html
+++ b/food_app/templates/base.html
@@ -6,7 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <title>Food App</title>
     </head>
-    <body>
+    <body class="d-flex flex-column min-vh-100">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
                     <a class="navbar-brand" href="#"></a>
@@ -22,13 +22,18 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{% url 'about' %}">About</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{% url 'contact' %}">Contact</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        
 
         {% block content %}
         {% endblock content %}
+
 
 <!-- JavaScript Bundle with Popper -->
              <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
