--- a/food_app/templates/menu_item_detail.html
+++ b/food_app/templates/menu_item_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <h1 class="pt-5">{{ item.meal }}</h1>
-    <p>{{ item.description }}</p>
-    <p>{{ item.price }}</p>
+    <p>Ingredients: {{ item.description }}</p>
+    <p>Price: {{ item.price }}</p>
 </div>
 {% endblock content %}
